--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
     "check-lint": "prettier -c src/**/*.{ts,tsx}",
     "prettify": "prettier --write src/**/*.{ts,tsx}",
     "_copy-electron-code": "npm run _main-transpile && copyfiles -u 2 -V \"./build/src-main/**/*\" \"./build/electron/\" && rimraf ./build/src-main/",
-    "_copy-ace": "copyfiles -u 3 -V \"./node_modules/ace-editor-builds/src-min-noconflict/**/*.*\" \"./public/ace-editor-min-noconflict/\"",
-    "_copy_ace_extras": "copyfiles -u 2 -V \"./extras/ace-editor/**/*.*\" \"./public/ace-editor-min-noconflict/\"",
+    "_copy-ace": "copyfiles --soft -u 3 -V \"./node_modules/ace-editor-builds/src-min-noconflict/**/*.*\" \"./public/ace-editor-min-noconflict/\"",
+    "_copy_ace_extras": "copyfiles --soft -u 2 -V \"./extras/ace-editor/**/*.*\" \"./public/ace-editor-min-noconflict/\"",
     "_react-build": "cross-env CI=false react-scripts build",
     "_react-dev": "cross-env APP_ENV=development cross-env BROWSER=none cross-env PORT=4000 cross-env react-scripts start",
     "_main-transpile": "cd ./src-main && tsc",
