--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/ace": "^0.0.43",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
+    "@types/js-yaml": "^3.12.3",
     "ace-editor-builds": "1.2.4",
     "ajv": "6.5.4",
     "ansi-styles": "^3.2.1",
