--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.0",
     "rimraf": "^3.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "@material-ui/lab": "latest"
   },
   "peerDependencies": {},
   "main": "build/src-main/electron.js",
