Package/TagsDynamic: Add a new tag component for autocompleting tag
** This commit is highly dependent on external set up and should not be
submitted upstream verbatim **

Autocomplete works if the local server is running.

It requires some set up based on the template too to be able to serve
the request.

Add axios library and use it to get the tags

--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "private": true,
   "dependencies": {
     "7zip-bin": "3.1.0",
-    "@material-ui/core": "^4.9.7",
-    "@material-ui/icons": "^4.9.1",
     "@types/fs-extra": "^8.1.0",
     "@types/jest": "^25.1.4",
     "@types/joi": "^14.3.4",
@@ -39,14 +37,19 @@
   },
   "devDependencies": {
     "@date-io/date-fns": "^1.x",
+    "@material-ui/lab": "4.0.0-alpha.48",
+    "@material-ui/core": "^4.9.9",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
     "@types/ace": "^0.0.43",
+    "@types/axios": "^0.14.0",
+    "@types/js-yaml": "^3.12.3",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
-    "@types/js-yaml": "^3.12.3",
     "ace-editor-builds": "1.2.4",
     "ajv": "6.5.4",
     "ansi-styles": "^3.2.1",
+    "axios": "^0.19.2",
     "chai": "4.1.2",
     "chalk": "^2.4.2",
     "concurrently": "3.5.1",
@@ -67,8 +70,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.0",
     "rimraf": "^3.0.2",
-    "typescript": "^3.8.3",
-    "@material-ui/lab": "latest"
+    "typescript": "^3.8.3"
   },
   "peerDependencies": {},
   "main": "build/src-main/electron.js",
